# tiny-beast-dictionary

./: README.md  index.html  package.json  preview.html  sed-commands.sh  snapcraft.yaml  tiny-beast-dictionary.desktop  vite.config.ts
src/: App.module.scss  App.scss  App.tsx  Modal.module.scss  Modal.tsx  countries.ts  index.scss  models.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  tiny-beast-dictionary.desktop
src-tauri/icons/: icon.icns
src-tauri/json_dictionaries/: en-fa.json
src-tauri/raw_dictionaries/: dictionary.xlsx
src-tauri/src/: google_translate.rs  helper.rs  main.rs
src-tauri/src/online_translate/: cambridge_translate.rs  google_translate.rs  mod.rs  other_online_translate.rs
src-tauri/src/speaker/: languages.rs  mod.rs
src/assets/: images.ts
src/assets/fonts/persian/: README.txt
src/components/: Translation.module.scss  Translation.tsx
src/components/language-options/: OnlineTab.module.scss  OnlineTab.tsx
src/components/language-options/offline-mode/: Modal.module.scss  Modal.tsx  OfflineTab.module.scss  OfflineTab.tsx
src/models/: countries.ts  online.mode.ts  theme.ts
src/types/: countries.ts  offline-mode.ts
