[package]
authors = ["arian pourarian <arianpourarian@gmail.com>"]
default-run = "tiny-beast-dictionary"
description = "tiny app for online/offline dictionaries"
edition = "2021"
license = "GFDL-1.3-or-later"
name = "tiny-beast-dictionary"
repository = "https://github.com/Arian94/tiny-beast-dictionary"
rust-version = "1.67.1"
version = "1.9.45"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = {version = "1.1.1", features = [] }

[dependencies]
futures-util = "0.3.21"
ijson = "0.1.3"
lazy_static = "1.4.0"
rdev = "0.5.2"
reqwest = { version = "0.11.4", features = ["stream", "rustls-tls"] }
scraper = "0.13.0"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
tar = "0.4.38"
tauri = {version = "1.2.4", features = ["clipboard-read-text", "process-exit", "shell-all", "system-tray", "window-center", "window-close", "window-hide", "window-set-position", "window-set-title", "window-show", "window-unminimize"] }
tts_rust = "0.3.5"
xz = "0.1.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[dev-dependencies]
fast_image_resize = "0.9.3"
icns = "0.3.1"
ico = "0.1.0"
image = "0.24.2"
license = "2.0.3"
